# rpg_youbot_torque_control

./: README.md
YoubotArmModel/: YoubotJacobi.hpp  YoubotJoints.hpp  org_tor.txt
component diagrams/dia/: Diagram1.dia
mir_youbot_torque_control/: CMakeLists.txt  package.xml
mir_youbot_torque_control/launch/: youbot_torque_control.launch
rpg_torque_control_moveit_interface/: CMakeLists.txt  package.xml
rpg_torque_control_moveit_interface/launch/: rpg_torque_control_moveit_interface.launch
rpg_torque_control_moveit_interface/src/: rpg_torque_control_moveit_interface.cpp  rpg_torque_control_moveit_interface.hpp
torque_control/: CMakeLists.txt  Controller_stepmode.cfg  package.xml
torque_control/YoubotArmModel/: YoubotArmDynamicsSymbolic.hpp
torque_control/launch/: torque_control.launch
torque_control/src/: torque.cpp  torque.hpp  torque_test.cpp  torque_test.hpp
torque_example/: CMakeLists.txt  package.xml
torque_example/src/: circle_test.cpp  example_CStoCS.cpp  example_JStoJS.cpp  ltr_JStoJS.cpp  traj_test.cpp
trajectory_generator/src/: traj.cpp
